--- a/wholesaler.html
+++ b/wholesaler.html
@@ -11,7 +11,7 @@
 <style>
 *{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#f3f6fb}
-.main{padding:20px}
+.main{padding:20px;max-width:900px;margin:auto}
 .icon-bar{display:flex;justify-content:center;gap:20px;background:#0f172a;padding:12px;border-radius:14px;max-width:650px;margin:auto}
 .icon-btn{background:#2563eb;color:#fff;border:none;width:55px;height:55px;border-radius:50%;font-size:22px;cursor:pointer}
 .header{margin-top:15px;background:#fff;padding:15px;border-radius:12px;text-align:center;box-shadow:0 5px 15px rgba(0,0,0,.1)}
@@ -81,6 +81,7 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
  </div>
 </div>
 
+<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <script>
 const API="https://shopbacked-vmhs.onrender.com";
 const TOKEN=localStorage.getItem("token");
@@ -88,11 +89,13 @@ const WID=localStorage.getItem("userId");
 const ROLE=localStorage.getItem("role");
 
 if(!TOKEN||!WID||ROLE!=="wholesaler"){
-  alert("Login again");
-  location.href="index.html";
+  alert("Login again"); location.href="index.html";
 }
-
 widText.innerText=WID.substring(0,8).toUpperCase();
+
+/* SOCKET.IO */
+const socket = io(API);
+socket.emit("joinWholesaler", WID);
 
 function openProduct(){productModal.style.display="flex";}
 function openOrders(){orderModal.style.display="flex";loadOrders();}
@@ -108,39 +111,33 @@ function closeAll(){document.querySelectorAll(".modal").forEach(m=>m.style.displ
 function saveProfile(){
  const p={shopName:shopName.value,mobile:shopMobile.value,address:shopAddress.value};
  localStorage.setItem("wholesalerProfile_"+WID,JSON.stringify(p));
- alert("Profile saved");
- closeAll();
+ alert("Profile saved"); closeAll();
 }
 
+/* ADD PRODUCT */
 async function addProduct(){
- const img=pimg.files[0];
- if(!img) return alert("Image required");
-
+ const img=pimg.files[0]; if(!img) return alert("Image required");
  const prof=JSON.parse(localStorage.getItem("wholesalerProfile_"+WID)||"{}");
  const r=new FileReader();
-
  r.onload=async()=>{
-  await fetch(API+"/api/products",{
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify({
-      wholesalerId:WID,
-      productName:pname.value,
-      price:pprice.value,
-      detail:pdetail.value,
-      image:r.result,
-      shopName:prof.shopName,
-      mobile:prof.mobile,
-      address:prof.address
-    })
-  });
-  alert("Product added");
-  closeAll();
-  loadProducts();
+  const res=await fetch(API+"/api/products",{method:"POST",headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
+  body:JSON.stringify({
+    wholesalerId:WID,
+    productName:pname.value,
+    price:pprice.value,
+    detail:pdetail.value,
+    image:r.result,
+    shopName:prof.shopName,
+    mobile:prof.mobile,
+    address:prof.address
+  })});
+  const d=await res.json();
+  if(d.success){alert("Product added");closeAll();loadProducts();}
  };
  r.readAsDataURL(img);
 }
 
+/* LOAD PRODUCTS */
 async function loadProducts(){
  const r=await fetch(API+"/api/products/wholesaler/"+WID);
  const d=await r.json();
@@ -152,43 +149,36 @@ async function loadProducts(){
   </div>`).join("");
 }
 
+/* CONFIRM ORDER WITH VEHICLE TYPE */
 async function confirmOrder(id){
- const vehicle=document.getElementById("vehicle_"+id).value;
- if(!vehicle) return alert("Select wheeler type");
+ const vehicle = prompt("Enter Vehicle Type: two/three/four wheeler");
+ if(!vehicle) return alert("Vehicle type required");
 
- if(!confirm("Confirm order with "+vehicle+" wheeler?")) return;
-
- await fetch(API+"/api/orders/"+id+"/confirm",{
-  method:"POST",
-  headers:{"Content-Type":"application/json"},
-  body:JSON.stringify({vehicleType:vehicle})
+ const res = await fetch(API+"/api/orders/"+id+"/confirm",{
+   method:"POST",
+   headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
+   body:JSON.stringify({vehicle})
  });
+ const data = await res.json();
+ if(data.success){
+   alert("Order confirmed ✅");
+   loadOrders();
 
- loadOrders();
+   // Notify delivery boy (socket)
+   socket.emit("newOrder", { orderId: id, vehicle });
+ }
 }
 
+/* LOAD ORDERS */
 async function loadOrders(){
  const r=await fetch(API+"/api/orders/wholesaler/"+WID);
  const d=await r.json();
-
  orders.innerHTML=d.orders.map(o=>`
   <div class="card">
    <b>${o.productName}</b> ₹${o.price}<br>
    <div class="status">Status: <b>${o.status}</b></div>
-
-   ${o.status==="pending"?`
-    <select id="vehicle_${o._id}">
-      <option value="">Select Wheeler</option>
-      <option value="two">Two Wheeler</option>
-      <option value="three">Three Wheeler</option>
-      <option value="four">Four Wheeler</option>
-    </select>
-    <button class="success" onclick="confirmOrder('${o._id}')">
-      Confirm Order
-    </button>
-   `:""}
-  </div>
- `).join("") || "No orders";
+   ${o.status==="pending"?`<button class="success" onclick="confirmOrder('${o._id}')">Confirm Order</button>`:""}
+  </div>`).join("") || "No orders";
 }
 
 loadProducts();
